<resources>
    <string name="app_name">Vejen</string>
    <string name="Sunset">Sunset:</string>
    <string name="Sunrise">Sunrise:</string>
    <string name="SolarNoon">Solar Noon:</string>
    <string name="DayLength">Day Length:</string>
    <string name="CivilTwilightBegin">Civil Twilight begin at:</string>
    <string name="CivilTwilightEnd">Civil Twilight end at:</string>
    <string name="NauticalTwilightBegin">Nautical Twilight begin at:</string>
    <string name="NauticalTwilightEnd">Nautical Twilight end at:</string>
    <string name="AstronomicalTwilightBegin">Astronomical Twilight begin at:</string>
    <string name="AstronomicalTwilightEnd">Astronomical Twilight end at:</string>
    <string name="unknown">unknown</string>
    <string name="CountryCity">Country/City</string>
    <string name="EnterLocation">Enter location...</string>
    <string name="MyLocation">My location</string>
    <string name="OtherLocation">Other location</string>
    <string name="Check">Check</string>
    <string name="Reset">Reset</string>
    <string name="Run">Run</string>
    <string name="Latitude">w:</string>
    <string name="Longitude">h:</string>
    <string name="Exit">Exit</string>
    <string name="humidity">Humidity: </string>
    <string name="temp_min">Minimal Temperature: </string>
    <string name="temp_max">Maximum Temperature: </string>
    <string name="pressure_sea_level">Pressure On Sea Level: </string>
    <string name="pressure_ground_level">Pressure On Ground Level: </string>
    <string name="wind_speed">Wind Speed Status: </string>
    <string name="clouds_status">Clouds Status: </string>
    <string name="rain_status">Rain Status: </string>
    <string name="snow_status">Snow Status: </string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="street">Street</string>
    <string name="passedRoad">Passed: </string>
    <string name="timer">Timer: </string>
    <string name="runGPS">Run GPS</string>
    <string name="stopGPS">Stop GPS</string>
    <string name="speed">Speed: </string>
</resources>
