<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.discoveries.jeremy.sunrisesunsetapp.fragments.SunriseSunsetFragment"
    android:background="@drawable/sunrise_sunset_background">

    <EditText
        android:id="@+id/insertLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:hint="@string/EnterLocation"
        android:fontFamily="monospace"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="36dp"
        android:textColorHint="@android:color/white"
        android:layout_alignParentTop="true"
        android:background="@drawable/blue_background"
        android:alpha="0.75"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:alpha="0.75"
            android:background="@drawable/blue_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/Sunrise"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/Sunset"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/solarNoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/SolarNoon"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dayLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/DayLength"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/civilTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/CivilTwilightBegin"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/civilTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/CivilTwilightEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nauticalTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/NauticalTwilightBegin"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nauticalTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/NauticalTwilightEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/astronomicalTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/AstronomicalTwilightBegin"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/astronomicalTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/AstronomicalTwilightEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/Reset"
        android:alpha="0.75"
        android:background="@drawable/blue_background"/>

    <Button
        android:id="@+id/runBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/Run"
        android:alpha="0.75"
        android:background="@drawable/blue_background"/>

</RelativeLayout>
