<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.discoveries.jeremy.sunrisesunsetapp.fragments.WeatherFragment"
    android:background="@drawable/background_weather">

    <EditText
        android:id="@+id/insertLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:hint="@string/EnterLocation"
        android:fontFamily="monospace"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:textColorHint="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/orange_background"
        android:alpha="0.75" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:alpha="0.75"
            android:background="@drawable/orange_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/temp_min"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/temp_max"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pressure_sea_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/pressure_sea_level"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pressure_ground_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/pressure_ground_level"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/wind_speed"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rain_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/rain_status"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/snow_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/snow_status"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/clouds_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="4dp"
                android:text="@string/clouds_status"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginTop="188dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/Reset"
        android:alpha="0.75"
        android:background="@drawable/orange_background"/>

    <Button
        android:id="@+id/runBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginTop="240dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/Run"
        android:alpha="0.75"
        android:background="@drawable/orange_background"/>

</RelativeLayout>
