<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.discoveries.jeremy.sunrisesunsetapp.LauncherActivity"
    android:background="@drawable/sunset_sunrise_background">

    <EditText
        android:id="@+id/insertLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:hint="@string/EnterLocation"
        android:fontFamily="monospace"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:textColorHint="@android:color/white"
        android:layout_alignParentTop="true"
        android:background="@drawable/launcher_background"
        android:alpha="0.75"
        android:layout_toStartOf="@id/checkBtn"
        android:layout_toLeftOf="@id/checkBtn"/>

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/Check"
        android:alpha="0.75"
        android:background="@drawable/launcher_background"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/launcher_background"
        android:alpha="0.75"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/myLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/MyLocation"
            android:textSize="16sp"
            android:checked="true"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/otherLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/OtherLocation"
            android:checked="false"
            android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="36dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/resetBtn"
        android:layout_toLeftOf="@id/resetBtn"
        android:padding="4dp"
        android:alpha="0.75"
        android:background="@drawable/launcher_background">

        <TextView
            android:id="@+id/country_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CountryCity"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"
            android:layout_margin="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Longitude"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_margin="4dp"
            android:fontFamily="monospace"/>

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"
            android:layout_margin="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Latitude"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_margin="4dp"
            android:fontFamily="monospace"/>

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"
            android:layout_margin="4dp" />

    </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:alpha="0.75"
            android:background="@drawable/launcher_background">

            <TextView
                android:padding="2dp"
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sunrise"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:fontFamily="monospace"
                android:layout_margin="2dp" />

            <TextView
                android:padding="2dp"
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sunset"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/solarNoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SolarNoon"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:fontFamily="monospace"
                android:layout_margin="2dp" />

            <TextView
                android:padding="2dp"
                android:id="@+id/dayLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DayLength"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/civilTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CivilTwilightBegin"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/civilTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CivilTwilightEnd"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/nauticalTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NauticalTwilightBegin"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/nauticalTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NauticalTwilightEnd"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/astronomicalTwilightBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AstronomicalTwilightBegin"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

            <TextView
                android:padding="2dp"
                android:id="@+id/astronomicalTwilightEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AstronomicalTwilightEnd"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:layout_margin="2dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="36dp"
        android:text="@string/Reset"
        android:alpha="0.75"
        android:background="@drawable/launcher_background"/>

    <Button
        android:id="@+id/runBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:text="@string/Run"
        android:alpha="0.75"
        android:background="@drawable/launcher_background"/>

</RelativeLayout>
